# Gryce-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  build.bat  build.py  check_screenshot.py  vulkan-1.def
core/: CMakeLists.txt  export.h
core/animation/: animation_clip.cpp  animation_clip.h  pose.cpp  pose.h  skeleton.cpp  skeleton.h
core/assets/: asset.h  asset_handle.h  asset_manager.cpp  asset_manager.h  assimp_importer.cpp  assimp_importer.h  async_loader.cpp  async_loader.h  compressed_image.cpp  compressed_image.h  dds_loader.cpp  dds_loader.h  ktx_loader.cpp  ktx_loader.h  mesh_data.h  obj_loader.cpp  obj_loader.h  skinned_mesh_data.h  stb_image_impl.cpp  texture_data.h  tinyexr_impl.cpp
core/audio/: audio_engine.cpp  audio_engine.h  miniaudio_impl.cpp
core/components/: audio_listener.h  audio_source.cpp  audio_source.h  box_collider.h  box_collider_2d.h  camera.h  character_controller_2d.h  character_controller_3d.h  circle_collider_2d.h  component.h  component_factory.cpp  component_factory.h  destructible_body.h  fragment_body.h  joint_2d.h  joint_3d.h  light.h  mesh_renderer.cpp  mesh_renderer.h  node2d.h  node3d.h  physical_material.cpp  physical_material.h  physics_body.h  plane_collider.h  prefab_instance.h  rigid_body.h  rigid_body_2d.h  skinned_mesh_renderer.cpp  skinned_mesh_renderer.h  sphere_collider.h  static_body.h  static_body_2d.h  terrain.cpp  terrain.h  transform.h
core/components/2d/: ambient_light_2d.h  basic_rect.h  camera_2d.h  component_2d.cpp  component_2d.h  label.h  light_2d.h  parallax_background.cpp  parallax_background.h  particle_emitter.cpp  particle_emitter.h  shape.h  skybox_2d.cpp  skybox_2d.h  sprite_2d.cpp  sprite_2d.h  tilemap.cpp  tilemap.h
core/ecs/: component_store.cpp  component_store.h  query.h  system.h  types.h  world.cpp  world.h
core/ecs/systems/: animator_system.cpp  animator_system.h  fracture_system.cpp  fracture_system.h  physics_system.cpp  physics_system.h  physics_system_2d.cpp  physics_system_2d.h  physics_system_3d.cpp  physics_system_3d.h  render_system_2d.cpp  render_system_2d.h  render_system_3d.cpp  render_system_3d.h
core/math/: camera.cpp  camera.h  math.cpp  math.h  ray.h
core/physics/: box2d_world_2d.cpp  box2d_world_2d.h  builtin_physics_world_2d.cpp  builtin_physics_world_2d.h  builtin_physics_world_3d.cpp  builtin_physics_world_3d.h  jolt_physics_world_3d.cpp  jolt_physics_world_3d.h  physics_factory.cpp  physics_factory.h  physics_point.h  physics_types.h  physics_world_2d.h  physics_world_3d.h
core/platform/: cursor.cpp  cursor.h  input.cpp  input.h  window.cpp  window.h
core/reflection/: builtin_reflections.cpp  reflection.h
core/render/: font_atlas.cpp  font_atlas.h  framebuffer.cpp  framebuffer.h  imgui_backend.h  material.cpp  material.h  mesh.cpp  mesh.h  render.cpp  render.h  render2d.cpp  render2d.h  render_command_buffer.cpp  render_command_buffer.h  render_commands.h  render_context.cpp  render_context.h  render_pipeline.cpp  render_pipeline.h  render_thread.cpp  render_thread.h  renderer2d_impl.cpp  renderer2d_impl.h  rhi_handle.h  rhi_resource_pool.h  shader.cpp  shader.h  skinned_vertex.h  texture.cpp  texture.h
core/render/vulkan/: vk_mesh.h  (+21 more)
core/resources/: gpack_bundle.cpp  gpack_bundle.h  project.cpp  project.h  resource_path.cpp  resource_path.h  tileset.h
core/scene/: entity.cpp  entity.h  prefab.cpp  prefab.h  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h  uuid.cpp  uuid.h
core/utils/: frame_limiter.cpp  frame_limiter.h
editor/: CMakeLists.txt  editor_app.cpp  editor_app.h  editor_camera.cpp  editor_camera.h  editor_panel.h  main.cpp  panel_manager.cpp  panel_manager.h
editor/asset/: asset_database.cpp  asset_database.h
editor/import/: gimport_settings.cpp  gimport_settings.h
editor/localization/: localization.cpp  localization.h
editor/panels/: console_panel.cpp  console_panel.h  game_view_panel.cpp  game_view_panel.h  hierarchy_panel.cpp  hierarchy_panel.h  inspector_panel.cpp  inspector_panel.h  project_panel.cpp  project_panel.h  viewport_panel.cpp  viewport_panel.h
editor/project/: editor_imgui.ini  editor_settings.json  editor_theme.json  project.gryce  project_settings.cpp  project_settings.h  project_settings.json
editor/shortcuts/: shortcut_manager.cpp  shortcut_manager.h
editor/ui/: animation_editor_window.cpp  animation_editor_window.h  debug_panel.cpp  editor_theme.cpp  editor_theme.h  gimport_editor_window.cpp  gimport_editor_window.h  material_editor_window.cpp  material_editor_window.h  particle_editor_window.cpp  particle_editor_window.h  project_settings_window.cpp  project_settings_window.h  settings_window.cpp  settings_window.h  terrain_editor_window.cpp  terrain_editor_window.h
editor/undo/: command.h  command_stack.cpp  command_stack.h  commands.cpp  commands.h  field_value.h
examples/: CMakeLists.txt
examples/3dtest/: 3dtest.cpp  project.gryce
examples/common/: app_launcher.cpp  app_launcher.h
examples/demo_audio3d/: main.cpp  project.gryce
examples/demo_character2d/: main.cpp
examples/demo_character3d/: main.cpp  project.gryce
examples/demo_fracture/: main.cpp  project.gryce
examples/demo_joints2d/: main.cpp
examples/demo_joints3d/: main.cpp  project.gryce
examples/demo_lighting2d/: main.cpp
examples/demo_lighting3d/: main.cpp  project.gryce
examples/demo_particles2d/: main.cpp
examples/demo_physics2d/: main.cpp
examples/demo_physics3d/: main.cpp  project.gryce
examples/demo_scene_serializer/: main.cpp  project.gryce
examples/demo_shapes2d/: main.cpp
examples/demo_skinned3d/: main.cpp  project.gryce
examples/demo_sprite2d/: main.cpp  project.gryce
examples/demo_tilemap2d/: main.cpp
examples/gt2dDemo/: gt2dDemo.cpp  project.gryce
tests/: CMakeLists.txt  animation_test.cpp  asset_test.cpp  compressed_texture_test.cpp  fracture_test.cpp  glog_test.cpp  math_test.cpp  physics_2d_test.cpp  physics_3d_test.cpp  prefab_test.cpp  ray_test.cpp  reflection_test.cpp  render2d_test.cpp  scene_test.cpp  skinned_renderer_test.cpp  test_main.cpp  tilemap_test.cpp
(+101 files in other folders)
